updated index image url to allow hotlink

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 	<div id=welcomeText>Welcome to my web page! </div>
 		<div id=picturesImage>
 		<a href="https://www.whistlerblackcomb.com">
-		<img src="https://cdn.pixabay.com/photo/2017/05/18/09/09/skiing-2322997_960_720.jpg"  width=960 height=610></a>
+		<img src="https://upload.wikimedia.org/wikipedia/commons/a/a9/Powder_telemark.jpg"  width=400 height=599></a>
 		<div>Someone else skiing powder</div>
 		</div>
 		
